[bdist_wheel]
universal = 1

[metadata]
name = casperdcl-test
version = 0.0.2
url = https://github.com/casperdcl/test
license = MPLv2.0
author = Casper da Costa-Luis
author_email = casper.dcl@physics.org
long_description = file: README.rst
platform =
    any
# Trove classifiers
# (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)

[options]
include_package_data = True
packages = find:
[options.package_data]
* = *.rst
